--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       
       <div id="sidebar" >
         <section id="all">
-          <div id="all_todos">
+          <div id="all_todos" data-title="all_todos">
             {{> all_todos_template}}
           </div>
           <article id="all_lists">
@@ -25,7 +25,7 @@
           </article>
         </section>
         <section class="completed" id="completed_items">
-          <div id="completed_todos">
+          <div id="completed_todos" data-title="completed_todos">
             {{> completed_todos_template}}
           </div>
           <article id="completed_lists">
@@ -192,7 +192,7 @@
     </script>
     <script type="text/x-handlebars" id="completed_list_template" data-type="partial">
       {{#each done_todos_by_date}}
-        <dl data-title="{{title}}" data-total="{{this.length}}" data-stat="completed">
+        <dl data-title="{{title}}done" data-total="{{this.length}}" data-stat="completed">
           <dt><time>{{title}}</time></dt>
           <dd>{{todos.length}}</dd>
         </dl>
